// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tag component > should match a snapshot 1`] = `
<DocumentFragment>
  <span
    class="el-intent-primary el-deprecated-tag"
  >
    Some Content
  </span>
</DocumentFragment>
`;

exports[`Tag component > should match a snapshot for intent 1`] = `
<DocumentFragment>
  <span
    class="el-intent-primary el-deprecated-tag"
  >
    Some Content
  </span>
</DocumentFragment>
`;

exports[`Tag component > should match a snapshot for intent 2`] = `
<DocumentFragment>
  <span
    class="el-intent-neutral el-deprecated-tag"
  >
    Some Content
  </span>
</DocumentFragment>
`;

exports[`Tag component > should match a snapshot for intent 3`] = `
<DocumentFragment>
  <span
    class="el-intent-danger el-deprecated-tag"
  >
    Some Content
  </span>
</DocumentFragment>
`;

exports[`Tag component > should match a snapshot for intent 4`] = `
<DocumentFragment>
  <span
    class="el-intent-success el-deprecated-tag"
  >
    Some Content
  </span>
</DocumentFragment>
`;

exports[`Tag component > should match a snapshot for intent 5`] = `
<DocumentFragment>
  <span
    class="el-intent-warning el-deprecated-tag"
  >
    Some Content
  </span>
</DocumentFragment>
`;

exports[`Tag component > should match a snapshot for intent 6`] = `
<DocumentFragment>
  <span
    class="el-intent-pending el-deprecated-tag"
  >
    Some Content
  </span>
</DocumentFragment>
`;

exports[`Tag component > should match a snapshot for intent 7`] = `
<DocumentFragment>
  <span
    class="el-intent-default el-deprecated-tag"
  >
    Some Content
  </span>
</DocumentFragment>
`;

exports[`TagGroup component > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-1 el-deprecated-tag-group"
  >
    <div
      class="mocked-styled-2 el-deprecated-tag-group-inner"
    >
      <span
        class="el-intent-default el-deprecated-tag"
      >
        Some Content
      </span>
      <span
        class="el-intent-primary el-deprecated-tag"
      >
        Some Content
      </span>
    </div>
  </div>
</DocumentFragment>
`;
